--- a/WebHost/public/style.css
+++ b/WebHost/public/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
-body{
+html, body {
     font-family: 'IBM Plex Sans';
     #mapDiv {
         padding: 0;
