--- a/PhotoGeotag/public/style.css
+++ b/PhotoGeotag/public/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
-html, body {
-    font-family: 'IBM Plex Sans';
-    #mapDiv {
-        padding: 0;
-        margin: 0;
-        height: 100%;
-        width: 100%;
-    }
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap");
+html,
+body {
+  font-family: "IBM Plex Sans";
+  #mapDiv {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+  }
 }
-
